--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -47,8 +47,8 @@ dist:
 	$(CP) icons$(S)*.svg inkscape$(S)pixmaps
 	$(MKDIR) inkscape$(S)fonts
 	$(CP) $(GTKDOS)$(S)fonts$(S)*.ttf inkscape$(S)fonts
-	$(MKDIR) inkscape$(S)doc
-	$(CP) doc$(S)* inkscape$(S)doc
+	$(CPDIR) doc inkscape
+	$(RMDIR) inkscape$(S)doc$(S)CVS
 	$(MKDIR) inkscape$(S)data
 	$(MKDIR) inkscape$(S)extensions
 	$(MKDIR) inkscape$(S)locale
