--- a/src/libnr/Makefile.am
+++ b/src/libnr/Makefile.am
@@ -43,10 +43,10 @@ libnr_a_SOURCES = \
 	nr-point.h nr-point-ops.h	\
 	nr-point-fns.cpp nr-point-fns.h	\
 	nr-rect-l.h	\
-	nr-rotate.h	\
+	nr-rotate.h nr-rotate-ops.h	\
 	nr-scale.h nr-scale-ops.h	\
 	nr-translate-ops.h nr-translate.h	\
-	nr-matrix.cpp nr-matrix.h \
+	nr-matrix.cpp nr-matrix.h nr-matrix-ops.h	\
 	nr-matrix-fns.cpp nr-matrix-fns.h \
 	nr-rect.cpp nr-rect.h \
 	nr-pixops.h \
