--- a/src/extension/internal/Makefile.am
+++ b/src/extension/internal/Makefile.am
@@ -3,10 +3,6 @@ if USE_GNOME_PRINT
 gnome_print_sources = gnome.cpp gnome.h
 endif
 
-if PLATFORM_WIN32
-win32_sources = win32.cpp win32.h
-endif 
-
 extdir = $(libdir)/inkscape/extensions
 extdatadir = $(datadir)/inkscape/extensions
 moduledir = $(datadir)/inkscape/modules
@@ -14,36 +10,21 @@ moduledir = $(datadir)/inkscape/modules
 INCLUDES = \
 	-I.. \
 	-I$(top_srcdir)/src \
+	-I$(top_srcdir)/src/extension \
 	-DINKSCAPE_EXTENSIONDIR=\""$(extdir)"\" \
 	-DINKSCAPE_EXTENSIONDATADIR=\""$(extdatadir)"\" \
 	-DINKSCAPE_MODULESDIR=\""$(moduledir)"\" \
 	$(INKSCAPE_CFLAGS) \
 	$(GNOME_PRINT_CFLAGS)
 
-noinst_LIBRARIES = libspmodules.a
+noinst_LIBRARIES = libinternal.a
 
-libspmodules_a_SOURCES = \
-		init.cpp \
-		init.h \
-		menu.cpp \
-		menu.h \
-		db.cpp \
-		db.h \
-		system.cpp \
-		system.h \
-\
-		extension.cpp \
-		extension.h \
-\
-		svg.cpp \
-		svg.h \
-\
-		ps.cpp ps.h \
-		$(kdeprivsources) \
-		$(gnome_print_sources) \
-		$(win32_sources)
+libinternal_a_SOURCES = \
+		svg.h svg.cpp \
+		ps.h ps.cpp \
+		$(gnome_print_sources)
 
 EXTRA_DIST = \
-	$(gnome_print_sources) \
+	gnome.cpp gnome.h \
 	win32.cpp win32.h
 
