Okay, I screwed up.  Here are some distcheck fixes for various things.  Still not entirely clean.  But these are much closer than we were.
(bzr r1638)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -141,17 +141,27 @@ src/livarot/ShapeDraw.cpp
 src/livarot/ShapeMisc.cpp
 src/livarot/ShapeSweep.cpp
 src/livarot/ShapeSweepUtils.cpp
+src/extension/db.cpp
+src/extension/db.h
+src/extension/extension.cpp
+src/extension/extension.h
+src/extension/init.cpp
+src/extension/init.h
+src/extension/menu.cpp
+src/extension/menu.h
+src/extension/system.cpp
+src/extension/system.h
+src/extension/implementation/script.cpp
+src/extension/implementation/script.h
+src/extension/internal/gnome.cpp
+src/extension/internal/gnome.h
+src/extension/internal/ps.cpp
+src/extension/internal/ps.h
+src/extension/internal/svg.cpp
+src/extension/internal/svg.h
+src/extension/internal/win32.cpp
+src/extension/internal/win32.h
 src/main.cpp
-src/module.cpp
-src/modules/db.cpp
-src/modules/extension.cpp
-src/modules/gnome.cpp
-src/modules/init.cpp
-src/modules/menu.cpp
-src/modules/ps.cpp
-src/modules/svg.cpp
-src/modules/system.cpp
-src/modules/win32.cpp
 src/node-context.cpp
 src/nodepath.cpp
 src/object-edit.cpp
