Change marker debugging status messages from conditional g_message to unconditional marker_status call.
(bzr r1683)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -75,6 +75,7 @@ inkscapelib_src = \
 	sp-animation.cpp sp-animation.h \
 	\
 	color.cpp color.h \
+	marker-status.cpp marker-status.h	\
 	style.cpp style.h \
 	\
 	document.cpp document.h document-private.h \
