I made the dir. reorg transition.
(bzr r1739)

--- a/configure.in
+++ b/configure.in
@@ -392,10 +392,12 @@ src/extension/Makefile
 src/extension/internal/Makefile
 src/extension/implementation/Makefile
 src/inkjar/Makefile
-extensions/Makefile
+share/Makefile
+share/extensions/Makefile
 doc/Makefile
 po/Makefile.in
-icons/Makefile
+share/icons/Makefile
+share/screens/Makefile
 inkscape.spec
 inkscape.1
 inkview.1
