--- a/configure.in
+++ b/configure.in
@@ -266,15 +266,15 @@ if test "$GCC" = "yes"; then
   CXXFLAGS="-Wno-unused-parameter $CXXFLAGS"
   # -Wno-unused-parameter isn't accepted by gcc 2.95.
   AC_COMPILE_IFELSE([int dummy;
-], , CXXFLAGS="$ink_svd_CXXFLAGS",)
+], , CXXFLAGS="-Wno-unused $ink_svd_CXXFLAGS",)
   # Note: At least one bug has been caught from unused parameter warnings,
   # so it might be worth trying not to disable it.
   # One way of selectively disabling the warnings (i.e. only where the
   # programmer deliberately isn't using the parameter, e.g. for a callback)
-  # is to use a UNUSED macro that trivially uses the variable (to silence the
-  # warning) and indicates that the programmer is deliberately not using the
-  # parameter.  A sufficient definition would be:
-  #   #define UNUSED(_var) (static_cast<void> (_var))
+  # is to remove the parameter name (leaving just its type), as is done
+  # in src/seltrans.cpp:sp_seltrans_handle_event; this indicates that the
+  # programmer deliberately has an unused parameter (e.g. because it's used
+  # as a callback or similar function pointer use).
 
   CXXFLAGS="-Wall -W -Wpointer-arith -Wcast-align -Wsign-compare -Woverloaded-virtual -Wswitch -Wstrict-prototypes $CXXFLAGS"
 fi
@@ -415,7 +415,9 @@ Configuration:
 
         Source code location:     ${srcdir}
         Compiler:                 ${CXX}
+	CPPFLAGS:                 ${CPPFLAGS}
         CXXFLAGS:                 ${CXXFLAGS}
+        LDFLAGS:                  ${LDFLAGS}
 
         Use POPT argument parser: ${popt_ok}
         Use Xft font database:    ${xft_ok}
@@ -423,4 +425,3 @@ Configuration:
         Use openoffice files:     ${ij}
         Use MMX optimizations:    ${use_mmx_asm}
 "
-
