Changed the extensions stuff to be C++ objects instead of GTK+ objects, this also cause some clean up in the code.  And an overall reduction in the amount of it.
(bzr r1785)

--- a/src/extension/implementation/Makefile.am
+++ b/src/extension/implementation/Makefile.am
@@ -16,5 +16,6 @@ INCLUDES = \
 noinst_LIBRARIES = libimplementation.a
 
 libimplementation_a_SOURCES = \
+		implementation.cpp implementation.h \
 		script.cpp script.h
 
