Adding back in inkview.  This was fixed by Bob, but he didn't add it back in.  It's back in the build now.  Thanks Bob for fixing my mistakes!
(bzr r1811)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -55,7 +55,7 @@ endif
 #
 # ################################################
 
-bin_PROGRAMS = inkscape 
+bin_PROGRAMS = inkscape inkview
 
 noinst_LIBRARIES = libinkscape.a
 
