--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -103,7 +103,7 @@ CFLAGS = -O3  -Wall -mms-bitfields -DVERSION=$(VERSION)
 	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
 
 .c.o:
-	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
+	$(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
 
 
