Added a few files...from samples...
(bzr r1871)

--- a/share/Makefile.am
+++ b/share/Makefile.am
@@ -13,7 +13,7 @@
 ##    markers \
 ##    tutorials
 
-SUBDIRS = icons screens extensions
+SUBDIRS = icons screens extensions tutorials
 
 ## COPY THE REST OF THE FOLDERS TO THE PROPER LOCATION
 
