--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,7 @@ EXTRA_DIST = \
 	intltool-extract.in	\
 	intltool-merge.in	\
 	intltool-update.in	\
+	libtool \
 	$(Graphics_in_files)	\
 	inkscape.spec.in	\
 	inkscape.spec		\
