Took out some spaces.
(bzr r2071)

--- a/share/tutorials/Makefile.am
+++ b/share/tutorials/Makefile.am
@@ -4,7 +4,8 @@ tutorialdir = $(datadir)/inkscape/tutorials
 tutorial_DATA = \
     tutorial-basic.svg \
     tutorial-advanced.svg \
-    elementsofdesign.svg
+    elementsofdesign.svg \
+    tipsandtricks.svg
 
 
 EXTRA_DIST = $(tutorial_DATA)
