Fixing the commandline printing.  This required fixing both the print driver to handle the newer extensions stuff.  It seems happy now.  I went ahead and implemented save as postscript while I was at it.
(bzr r2110)

--- a/src/extension/internal/Makefile.am
+++ b/src/extension/internal/Makefile.am
@@ -22,6 +22,7 @@ noinst_LIBRARIES = libinternal.a
 libinternal_a_SOURCES = \
 		svg.h svg.cpp \
 		ps.h ps.cpp \
+		ps-out.h ps-out.cpp \
 		$(gnome_print_sources)
 
 EXTRA_DIST = \
