incorporated number serialization code from bryce, also removed unused variables
(bzr r2179)

--- a/src/svg/Makefile.am
+++ b/src/svg/Makefile.am
@@ -23,4 +23,6 @@ libspsvg_a_SOURCES = \
 	svg-affine.cpp \
 	svg-path.cpp \
 	stringstream.h \
-	gnome-canvas-bpath-util.cpp gnome-canvas-bpath-util.h
+	gnome-canvas-bpath-util.cpp gnome-canvas-bpath-util.h \
+	round.cpp itos.cpp ftos.cpp ftos.h
+
