--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
-AC_INIT(inkscape, 0.38cvs)
+AC_INIT(inkscape, 0.38)
 AC_CANONICAL_HOST
 AC_CONFIG_SRCDIR(src/main.cpp)
 AM_INIT_AUTOMAKE
